# paperforge

./: HANDOFF.md  README.md
assets/: README.md  paperforge.tex
docs/: AI-POLICIES.md  ARCHITECTURE.md  DEPLOYMENT.md  DIRECTIVES.md  EDITOR.md  HTML-FEATURES.md  NOTATION.md  NOVELTY.md  PLAGIARISM.md  REFERENCES.md  REVIEW.md
ingest/: blueprint_gen.py  claim_inline.py  fetch_arxiv_corpus.py  lean_axioms.py  lean_citable.py  lean_declmap.py  lean_knowls.py  lean_ledger.py  mathjax_macros.py  notation_far.py  notation_registry.py  novelty_evidence.py  section_summaries_registry.py  tex2ptx.py
pretext-template/: project.ptx
pretext-template/macros/: README.md
pretext-template/publication/: print.ptx  publication.ptx
pretext-template/source/: main.ptx
pretext-template/web-assets/: detail-ui.css  detail-ui.js  paper-style.css
pretext-template/xsl/: arxiv-latex.xsl  custom-html.xsl  print-latex.xsl
review/: dashboard.html  paper-edit.js  paper-margin.js  paper-marks.js  paper-tags.js  review_server.py
skills/apply-directives/: SKILL.md
skills/background-sections/: SKILL.md
skills/bridge-text/: SKILL.md
skills/citation-audit/: SKILL.md
skills/grammar-pass/: SKILL.md
templates/: agents.toml  build-site.sh  build-web.sh  deploy.sh  fetch-vendor.sh  paper.toml
validators/: pyproject.toml
validators/paperforge_validators/: __init__.py  _document.py  directives.py  lean_links.py  notation_order.py  numbering_drift.py  plagiarism.py  references.py  run_all.py  section_summaries.py
validators/tests/: test_content_validators.py  test_notation_far.py
(+14 files in other folders)
